fixed layout bug

--- a/css/main.css
+++ b/css/main.css
@@ -11,29 +11,30 @@ body {
 .main-app {
   height: 100%;
   display: grid;
-  grid-template-rows: 4rem minmax(calc(100% - 8rem), 100vh-8rem) 4rem;
+  grid-template-rows: fit-content minmax(calc(100vh - 8rem), calc(100% - 8rem)) fit-content;
 }
 
 header,
 footer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   background-color: #333;
   color: whitesmoke;
+  text-align: center;
 }
 
 .main-header {
   width: 80%;
-  margin: 0 auto;
-  padding: 1rem 0;
+  margin: auto;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
 }
+.main-header span {
+  flex-basis: 100%;
+}
 
-.todo-app {
+.todo-app,
+.home-page {
   padding: 1rem 0;
   text-align: center;
 }
